finished js logic with functions end eventlistener for changing color, erasin and resetting the board

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <button class="reset buttons">Reset</button>
     </div>
     <div class="create-board">
-      <input class= "input" type="number" placeholder="Size of the board" value="16">
-      <button class="set-size">Set Size</button>
+      <input class= "input" type="number" placeholder="Size of the board" value="32" onchange="changeSize(this.value)">
+      <button class="set-size ">Set Size</button>
       <span class="create-board-error"></span>
     </div>
   </div>
